--- a/playbooks/roles/tokens/templates/docker/docker-compose.yml
+++ b/playbooks/roles/tokens/templates/docker/docker-compose.yml
@@ -20,9 +20,12 @@ services:
             # - '{{ tapisdir }}/tokens/tokens-service.log:/home/tapis/service.log'
         networks:
             - tapis
-        environment:
-        #     # an example of the allservices_password, only used in develop. generate a new one with
-        #     # date +%s | sha256sum | base64 | head -c 32 ; echo or something similar.
-            - site_admin_privatekey
+        # environment:
+        # #     # an example of the allservices_password, only used in develop. generate a new one with
+        # #     # date +%s | sha256sum | base64 | head -c 32 ; echo or something similar.
+        #     - site_admin_privatekey
         #     - site_dev_privatekey
         #     - tokens_service_password
+        env_file: 
+            - {{ tapisdatadir }}/tokens/env
+            # site_admin_privatekey='VALUE' 
