--- a/playbooks/roles/authenticator/templates/docker/authenticator-config.json
+++ b/playbooks/roles/authenticator/templates/docker/authenticator-config.json
@@ -5,7 +5,7 @@
     "service_name": "{{authenticator_service_name}}",
     "tenants": {{ authenticator_service_tenants | to_json }},
     "show_traceback": {{ authenticator_show_traceback | to_json }},
-    "sql_db_url": "authenticator-postgres:5432/authenticator",
+    "sql_db_url": "authenticator-postgres:5432",
     "dev_ldap_tenant_id": "{{authenticator_dev_ldap_tenant_id}}",
     "log_level": "{{authenticator_log_level}}"
 }
