--- a/playbooks/roles/jobs/defaults/main/vars.yml
+++ b/playbooks/roles/jobs/defaults/main/vars.yml
@@ -7,7 +7,7 @@ jobs_service_url: "{{ global_service_url }}"
 jobs_postgres_pvc: jobs-postgres-vol01
 jobs_storage_class: "{{ global_storage_class }}"
 jobs_rabbitmq_pvc: jobs-rabbitmq-vol01
-jobs_node_selector: true
+jobs_node_selector: null
 jobs_node_name: true
 jobs_service_password: 
 jobs_postgres_password:
