--- a/playbooks/roles/systems/templates/kube/api/deploy.yml
+++ b/playbooks/roles/systems/templates/kube/api/deploy.yml
@@ -12,9 +12,9 @@ spec:
       labels:
         app: systems-api
     spec:
-{% if systems_node_selector is defined %}
+{% if systems_node_selector is not none %}
       nodeSelector:
-        exempt: "{{systems_node_selector}}"
+        exempt: "yes"
 {% endif %}
       containers:
       - name: systems-api
