Auth stack working.

--- a/playbooks/roles/authenticator/templates/docker/docker-compose.yml
+++ b/playbooks/roles/authenticator/templates/docker/docker-compose.yml
@@ -10,13 +10,16 @@ services:
     networks:
         - tapis
     env_file:
-        - {{ tapisdatadir }}/authenticator/env
+        - "{{ tapisdatadir }}/authenticator/env"
     volumes:
         - "{{ tapisdir }}/authenticator/authenticator-config.json:/home/tapis/config.json"
     depends_on: 
-        - authenticator-postgres
-        - authenticator-ldap
-        - authenticator-migrations
+        authenticator-postgres:
+            condition: service_healthy
+        authenticator-ldap:
+            condition: service_started
+        authenticator-migrations:
+            condition: service_completed_successfully
 
 
   authenticator-postgres:
@@ -25,15 +28,19 @@ services:
     networks:
         - tapis
     environment:
-        - PGDATA=/pgdata/data
+        # - PGDATA=/pgdata/data
         - POSTGRES_USER=authenticator
         - POSTGRES_DB=authenticator
         - POSTGRES_HOST_AUTH_METHOD=trust
-        # - POSTGRES_PASSWORD
     env_file:
-        - {{ tapisdatadir }}/authenticator/env
+        - "{{ tapisdatadir }}/authenticator/env"
     volumes:
-        - {{ tapisdatadir }}/authenticator/postgres:/var/lib/postgresql/data
+        - "{{ tapisdatadir }}/authenticator/postgres:/var/lib/postgresql/data"
+    healthcheck:
+        test: ["CMD-SHELL", "pg_isready -U postgres"]
+        interval: 5s
+        timeout: 5s
+        retries: 5
 
 
   authenticator-migrations:
@@ -42,10 +49,12 @@ services:
     networks:
         - tapis
     env_file:
-        - {{ tapisdatadir }}/authenticator/env
+        - "{{ tapisdatadir }}/authenticator/env"
     depends_on:
-        - authenticator-postgres
-        - authenticator-ldap
+        authenticator-postgres:
+            condition: service_healthy
+        authenticator-ldap:
+            condition: service_started
     command: ['upgrade']
     volumes:
         - "{{ tapisdir }}/authenticator/authenticator-config.json:/home/tapis/config.json"
@@ -60,10 +69,10 @@ services:
         - LDAP_DOMAIN=tapis
         - LDAP_ORGANISATION=Tapis
     env_file:
-        - {{ tapisdatadir }}/authenticator/env
+        - "{{ tapisdatadir }}/authenticator/env"
     volumes:
-        - {{ tapisdatadir }}/authenticator/ldap:/data/ldap
-        - "{{ tapisdir }}/authenticator/authenticator-config.json:/home/tapis/config.json"
+        - "{{ tapisdatadir }}/authenticator/ldap:/data/ldap"
     depends_on:
-        - authenticator-postgres
+        authenticator-postgres:
+            condition: service_healthy
 
