--- a/playbooks/roles/proxy/templates/docker/locations/authenticator.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/authenticator.conf
@@ -5,7 +5,7 @@ location /v3/oauth2
     error_page 500 /token-revoked.json;
 
     # use var to allow nginx to start even if $upstream is down
-    set $upstream http://authenticator:5000;
+    set $upstream http://authenticator-api:5000;
     proxy_pass $upstream;
 
     proxy_redirect off;
