--- a/playbooks/roles/tokens/templates/docker/docker-compose.yml
+++ b/playbooks/roles/tokens/templates/docker/docker-compose.yml
@@ -9,23 +9,15 @@ services:
     tokens-api:
         container_name: tokens-api
         image: {{ tokens_api_image }}
-        # ports:
-        #     - "127.0.0.1:5221:5000"
         volumes:
-            # uncomment one of the following ---
-            # - ./config-local.json:/home/tapis/config.json
             - '{{ tapisdir }}/tokens/tokens-config.json:/home/tapis/config.json'
-            # - ./config-local-uh.json:/home/tapis/config.json
-            # - ./service.log:/home/tapis/service.log
-            # - '{{ tapisdir }}/tokens/tokens-service.log:/home/tapis/service.log'
+            - '{{ tapisdir }}/admin/verification/tokens-test:/home/tapis/healthcheck'
         networks:
             - tapis
-        # environment:
-        # #     # an example of the allservices_password, only used in develop. generate a new one with
-        # #     # date +%s | sha256sum | base64 | head -c 32 ; echo or something similar.
-        #     - site_admin_privatekey
-        #     - site_dev_privatekey
-        #     - tokens_service_password
         env_file: 
-            - {{ tapisdatadir }}/tokens/env
-            # site_admin_privatekey='VALUE'
+            - "{{ tapisdatadir }}/tokens/env"
+        healthcheck: # TODO: fix this
+            test: ["CMD-SHELL", "./healthcheck"]
+            interval: 5s
+            timeout: 5s
+            retries: 5
