--- a/playbooks/roles/skadmin/templates/kube/sk-admin-init.yml
+++ b/playbooks/roles/skadmin/templates/kube/sk-admin-init.yml
@@ -7,6 +7,7 @@ metadata:
 spec:
   template:
     spec:
+      serviceAccountName: {{ tapis_sk_privileged_sa | default(tapis_privileged_sa) | default('default') }}
       restartPolicy: Never
       containers:
       - name: sk-admin-init
