files seems healthy

--- a/playbooks/roles/authenticator/templates/docker/docker-compose.yml
+++ b/playbooks/roles/authenticator/templates/docker/docker-compose.yml
@@ -37,7 +37,7 @@ services:
     volumes:
         - "{{ tapisdatadir }}/authenticator/postgres:/var/lib/postgresql/data"
     healthcheck:
-        test: ["CMD-SHELL", "pg_isready -U postgres"]
+        test: pg_isready -U postgres
         interval: 5s
         timeout: 5s
         retries: 5
