change test.tapis.io to variable

--- a/playbooks/roles/proxy/templates/docker/nginx.conf
+++ b/playbooks/roles/proxy/templates/docker/nginx.conf
@@ -23,7 +23,7 @@ stream {
     # Ports used are purely random. Feel free to change.
     map $ssl_preread_server_name $instanceport {
         # Route TCP with following whatever.pods.whatever.develop.tapis.ioto pods-nginx.
-        "~pods.*.test.tapis.io"      5510;
+        "~pods.{{ proxy_nginx_server_name }}"      5510;
         # Else default to 8443 (listened to by http stanza).
         default                         8443;
     }
@@ -84,7 +84,7 @@ http {
         listen 80;
         listen [::]:80;
 
-        server_name  *.test.tapis.io;
+        server_name  {{ proxy_nginx_server_name }};
 
         # Redirect with 307 to preserve post data. (301 does not)
         if ($request_method = POST) {
@@ -107,7 +107,7 @@ http {
         listen 8443 ssl http2;
         listen [::]:8443 ssl http2;
 
-        server_name  *.test.tapis.io;
+        server_name  {{ proxy_nginx_server_name }};
 
         ssl_certificate /tmp/ssl/tls.crt;
         ssl_certificate_key /tmp/ssl/tls.key;
