--- a/playbooks/roles/notifications/defaults/main/vars.yml
+++ b/playbooks/roles/notifications/defaults/main/vars.yml
@@ -10,5 +10,7 @@ notifications_rabbitmq_pvc: notifications-rabbitmq-vol01
 notifications_mail_provider: SMTP
 notifications_mail_host: relay.example.com
 notifications_mail_port: 25
+notifications_heap_min: 1g
+notifications_heap_max: 4g
 
 
