--- a/playbooks/roles/security/templates/docker/docker-compose.yml
+++ b/playbooks/roles/security/templates/docker/docker-compose.yml
@@ -56,6 +56,7 @@ services:
 
     security-api:
         container_name: security-api
+        user: ${UID}:${GID}
         image: {{ security_api_image }}
         environment:
             - TAPIS_SITE_ID={{ security_service_site_id }}
