--- a/playbooks/roles/proxy/templates/docker/docker-compose.yml
+++ b/playbooks/roles/proxy/templates/docker/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - ./token-revoked.json:/etc/nginx/html/token-revoked.json:ro
     networks:
       - tapis
+    restart: always
   
   site-router:
     container_name: site-router
@@ -28,6 +29,7 @@ services:
       - ./site-router-config.json:/home/tapis/config.json:ro
     networks:
       - tapis
+    restart: always
   
   site-router-redis:
     container_name: site-router-redis
@@ -38,3 +40,4 @@ services:
       - {{ tapisdatadir }}/proxy-site-router-redis:/data
     networks:
       - tapis
+    restart: always
