used systems_postgres_image for migrations

--- a/playbooks/roles/systems/templates/docker/docker-compose.yml
+++ b/playbooks/roles/systems/templates/docker/docker-compose.yml
@@ -42,7 +42,7 @@ services:
 
     systems-migrations:
         container_name: systems-migrations
-        image: {{ systems_migrations_image }}
+        image: {{ systems_postgres_image }}
         networks:
             - tapis
         volumes:
