Added serviceAccountName to api.yml
When running the security API deployment with the optional initContainer "renew-sk-secret", that container needs to run under a privileged service account.  Unfortunately the whole sk-api then runs with that privilege.

--- a/playbooks/roles/security/templates/kube/api/api.yml
+++ b/playbooks/roles/security/templates/kube/api/api.yml
@@ -12,6 +12,9 @@ spec:
         app: sk-api
     spec:
 {% if security_renew_sk_script == true %}
+{% if skadmin_sk_privileged_sa is not none %}
+      serviceAccountName: {{ skadmin_sk_privileged_sa }}
+{% endif %}
       initContainers:
       - name: renew-sk-secret
         command: ["/tmp/renew-sk-secret-script"]
