initial test of component nginx

--- a/playbooks/roles/proxy/templates/docker/nginx.conf
+++ b/playbooks/roles/proxy/templates/docker/nginx.conf
@@ -9,6 +9,7 @@ events {
     worker_connections  1024;
 }
 
+{% if "pods" in components_to_deploy %}
 ### Everything first goes through this stream stanza. Map matches subdomain to port to route to.
 ### If no map found, we route to default 8443. This directs back to HTTP stanza as normal.
 stream {
@@ -51,6 +52,7 @@ stream {
         proxy_pass              127.0.0.1:$instanceport;
     }
 }
+{% endif %}
 
 
 http {
@@ -139,7 +141,5 @@ http {
         send_timeout          3600;
 
         include /etc/nginx/conf.d/locations/*.conf;
-
-
     }
 }
