--- a/playbooks/roles/files/templates/kube/worker/deploy.yml
+++ b/playbooks/roles/files/templates/kube/worker/deploy.yml
@@ -62,6 +62,14 @@ spec:
                 secretKeyRef:
                   name: tapis-files-secrets
                   key: service-password
+{% if files_globus_client_id is defined %}
+            - name: TAPIS_GLOBUS_CLIENT_ID
+              valueFrom:
+                configMapKeyRef:
+                  name: files-config
+                  key: globus_client_id
+{% endif %}
+
           image: {{ files_workers_image }}
           imagePullPolicy: Always
           name: files-workers
