Changing globus client id template name

--- a/playbooks/roles/files/templates/kube/worker/deploy.yml
+++ b/playbooks/roles/files/templates/kube/worker/deploy.yml
@@ -62,7 +62,7 @@ spec:
                 secretKeyRef:
                   name: tapis-files-secrets
                   key: service-password
-{% if files_globus_client_id is defined %}
+{% if systems_globus_client_id is defined %}
             - name: TAPIS_GLOBUS_CLIENT_ID
               valueFrom:
                 configMapKeyRef:
