fix conditional in case var is undefined

--- a/playbooks/roles/security/templates/kube/api/api.yml
+++ b/playbooks/roles/security/templates/kube/api/api.yml
@@ -11,10 +11,10 @@ spec:
       labels:
         app: sk-api
     spec:
-{% if security_renew_sk_script == true %}
-{% if skadmin_sk_privileged_sa is not none %}
+{% if skadmin_sk_privileged_sa is defined and not none %}
       serviceAccountName: {{ skadmin_sk_privileged_sa }}
 {% endif %}
+{% if security_renew_sk_script == true %}
       initContainers:
       - name: renew-sk-secret
         command: ["/tmp/renew-sk-secret-script"]
